# t01-llm-battle

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  close-external-issues.yml  publish.yml
prd/: 01-prd.md  02-tech-stack.md  03-functional-requirements.md  04-non-functional-requirements.md  05-user-stories.md  06-data-models.md  07-roadmap.md  08-news-boards.md  09-ui-redesign.md
t01_llm_battle/: board_engine.py  cli.py  crypto.py  db.py  engine.py  judge.py  llm_pricing.json  pricing.py  publisher.py  rate_limiter.py  scheduler.py  server.py  template_service.py  tool_pricing.json
tests/: conftest.py  test_anthropic_provider.py  test_battles_router.py  test_board_pruning.py  test_board_runs_router.py  test_boards_router.py  test_crypto.py  test_db.py  test_e2e_complete_run.py  test_engine.py  test_firecrawl_provider.py  test_google_provider.py  test_groq_provider.py  test_judge.py  test_judge_generate_report.py  test_judge_mixed_fighters.py  test_keys_router.py  test_lmstudio_provider.py  test_manual_submit_flow.py  test_news_fighters_router.py  test_news_sources_router.py  test_ollama_provider.py  test_openai_adapter.py  test_openrouter_provider.py  test_pricing.py  test_provider_config_passthrough.py  test_providers_router.py  test_publisher.py  test_rate_limiter.py  test_routers_fighters.py  test_routers_sources.py  test_runs_router.py  test_scheduler.py  test_serper_provider.py  test_source_delete.py  test_tavily_provider.py  test_templates.py  test_templates_router.py
(+39 files in other folders)
