[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t01-llm-battle"
version = "0.1.0"
description = "A tiny tool to help you pick the right LLM for your project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "typer>=0.12",
    "python-multipart>=0.0.9",
]

[project.scripts]
t01-llm-battle = "t01_llm_battle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["t01_llm_battle"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4",
]
